--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@ $accent: #6e6702;
 $background: #3e5258;
 $popAccent: #7b8dee;
 $mainFont: 'Eva-Peron';
+$secondaryFont: 'EVA-Duarte';
 
 @font-face {
   font-family: 'Eva-Peron';
